--- a/src/index.css
+++ b/src/index.css
@@ -80,27 +80,32 @@ dialog.video-player article {
   }
 
   .date {
-    width: 10%;
-    max-width: 10%;
+    width: 6em;
     padding-left: 0.5em;
   }
 
   .subject {
-    width: 20%;
-    max-width: 20%;
+    max-width: 15em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     text-align: right;
-    padding-right: 0.5em;
+    padding: 0 0.5em;
   }
 
   .title {
-    width: 70%;
-    max-width: 70%;
+    min-width: 0;
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
 
     .line {
       display: flex;
       align-items: center;
       text-wrap: nowrap;
       overflow: hidden;
+      min-width: 0;
 
       & > .fa {
         margin-right: 0.5em;
@@ -114,6 +119,7 @@ dialog.video-player article {
 
   progress {
     margin: 0 0 0 1em;
+    min-width: 3em;
     width: 10%;
   }
 
